--- a/products.html
+++ b/products.html
@@ -138,7 +138,7 @@
   <div class="col-lg-3 col-md-6 col-sm-12 mt-5">
   <div class="image-box">
     <a href="popsicle.html">
-    <img src="products cover/popsicle.jpeg" alt="Unsplashed Random" width="540" height="548" />
+    <img src="products cover/scoopso popsicle.jpeg" alt="Unsplashed Random" width="540" height="548" />
     </a>
   </div>
 </div>
