--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
       <div class="text-section mt-5 col-sm-12 col-md-8 col-lg-7">
         <div class="title-div text-center">
           <h1 class="mt-3 text-uppercase fw-bold title-main animate fadeInDown two"><span class="span-2"
-              style="color: #f7aa10;">story</span> our</h1>
+              style="color: #f7aa10;">Our </span> story</h1>
           <img class="img-fluid title-img-2" width="250px" style="margin-top: -1rem;" src="img/title-decor1.png" alt="">
         </div>
         <p class="text-center about-p mt-4 mx-3">Scoopso group of companies is one of the fastest growing icecream manufacturers in Kerala, with two well known sub brand 
