--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
   </a>
   </div>
 </div>
-<div class="col-lg-3 col-md-6 col-sm-12 mt-5 d-none d-lg-block">
+<div class="col-lg-3 col-md-6 col-sm-12 mt-5">
   <div class="image-box">
     <a href="coming soon.html">
     <img src="products cover/sipup.jpeg" alt="Unsplashed Random" width="540" height="548" />
